# tidbyt-trains-and-bikes

./: .env.local.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RELEASING.md  application.py  compose.yaml  mise.toml  nixpacks.toml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
assets/: citibike.pixil  lightning.pixil
deploy/: docker-compose.infra.yml
scripts/: release.sh
src/app/: app.py  app.star  sentry.py  settings.py
src/app/api/: app.py  log.py  mocks.py  models.py
src/app/lib/: citibike.py  http.py  mta.py  periodic_task.py  tidbyt.py  tidbyt_updater.py  transit.py  weather.py
src/app/tasks/: __init__.py
src/app/tidbyt_app/: trains_and_bikes.star
src/app/tidbyt_apps/: rctransit.star
tests/: .env.test  conftest.py  syrupy_extensions.py  test_app_rendering.py
tests/api/: test_health.py
tests/lib/: test_periodic_task.py
tests/tidbyt_apps/: test_rctransit.py
